samples/_failures_safe/1761720767_7aee02_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_680b72f3.c: In function ‘write_compressed_output’:
./samples/SAFE/__tmp_680b72f3.c:186:9: error: expected expression at end of input
  186 |         if (fwrite(&current->block_size, sizeof(current->block_size), 1,
      |         ^~
./samples/SAFE/__tmp_680b72f3.c:186:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_680b72f3.c:186:9: error: expected declaration or statement at end of input
